fixing issue with cart button and product switch on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ img {
   vertical-align: middle;
 }
 
+.nav_links > li > a:hover {
+  color: var(--orange);
+}
+
 .header a {
   text-decoration: none;
   color: var(--dark-grayish-blue);
@@ -271,7 +275,7 @@ main {
     /* I have no idea why above isnt taking effect */
   }
 
-  .curved_border {
+  #main_image {
     border-radius: unset;
   }
   .product {
@@ -281,7 +285,10 @@ main {
     margin: 1rem;
   }
   .image_thumbnails {
-    display: none;
+    padding: 0.5rem 0;
+    gap: 0.5rem;
+    margin: 0 0.5rem;
+    /* display: none; */
   }
   .add_to_cart {
     flex-direction: column;
